--- a/src/pages/MoviesGrid.css
+++ b/src/pages/MoviesGrid.css
@@ -1,59 +1,85 @@
 .container .title {
-    color: #FFF;
-    font-size: 2.5rem;
-    text-align: center;
-    margin: 2rem 0 1rem;
+  color: #fff;
+  font-size: 2.5rem;
+  text-align: center;
+  margin: 2rem 0 1rem;
 }
 
 .title .query-text {
-    color: #F7D354
+  color: #f7d354;
 }
 
-.movies-container {
+@media (min-width: 600px) {
+  .movies-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    text-align: center;
     padding: 2rem;
-    max-width: 1200px;
-    margin: 0 auto;  
-}
-
-.movies-container div {
-    width: 30%;
-    color: #FFF;
+    margin: 0 auto;
+  }
+  .movies-container div {
+    width: 25%;
+    color: #fff;
     margin-bottom: 2.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     background-color: #111;
     padding: 1rem;
+  }
 }
+
+@media (max-width: 600px) {
+  .movies-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    font-size: small;
+    padding: 2rem;
+  }
+  .movies-container div {
+    width: 80%;
+    color: #fff;
+    margin-bottom: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #111;
+    padding: 1rem;
+  }
+}
+
+
 
 .movies-container div img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
-.movies-container div img, .movies-container div p, .movies-container div h2 {
-     margin-bottom: 1rem;
+.movies-container div img,
+.movies-container div p,
+.movies-container div h2 {
+  margin-bottom: 1rem;
 }
 
 .movies-container div svg {
-    color: #f7d353;
+  color: #f7d353;
 }
 
 .movies-container div a {
-    background-color: #F7D354;
-    border: 2px solid #F7D354;
-    border-radius: 4px;
-    color: #000;
-    padding: 1rem 0.5rem;
-    align-items: center;
-    text-align: center;
-    transition: .4s;
-    font-weight: bold;
+  background-color: #f7d354;
+  border: 2px solid #f7d354;
+  border-radius: 4px;
+  color: #000;
+  padding: 1rem 0.5rem;
+  align-items: center;
+  text-align: center;
+  transition: 0.4s;
+  font-weight: bold;
 }
 
 .movies-container div a:hover {
-    background-color: transparent;
-    color: #f7d354;
+  background-color: transparent;
+  color: #f7d354;
 }
