--- a/src/pages/Movie.css
+++ b/src/pages/Movie.css
@@ -57,3 +57,14 @@ movie-card h2,
 .description  {
     padding-bottom: 5rem;
 }
+
+.topmovies {
+  font-size: 2.5rem;
+  text-align: center;
+  margin: 2rem 0 1rem;
+  color: #f7d354;
+  border: 2px solid black;
+  border-radius: 4px;
+  font-family: Helvetica;
+  font-weight: bold;
+}
